Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBoolObjUndefined.quorum
class Main
    action Main
        Bolean bool
        bool = cast(Boolean, undefined)
        if bool = undefined
            output "passed"
        end
    end
end