Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjText.quorum
class main
    action Main
        Boolean bool
        bool = cast(Boolean, "text")
    end
end